feat: enhance language and theme management, add new certificates and projects

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -115,6 +115,28 @@ const navigationItems = [
       }
     </script>
 
+    <script is:inline>
+      const getTheme = () => {
+        if (
+          typeof localStorage !== "undefined" &&
+          localStorage.getItem("theme")
+        ) {
+          return localStorage.getItem("theme");
+        }
+        return window.matchMedia("(prefers-color-scheme: dark)").matches
+          ? "dark"
+          : "light";
+      };
+
+      const theme = getTheme();
+
+      if (theme === "dark") {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
+    </script>
+
     <meta name="generator" content={Astro.generator} />
   </head>
   <body>
