--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../../../layouts/Layout.astro";
-import { ProjectDetail } from "../../../components/project-detail-page/project-detail";
+import Layout from "../../layouts/Layout.astro";
+import { ProjectDetail } from "../../components/project-detail-page/project-detail";
 import { getCollection, render } from "astro:content";
 import type {
   ProjectStatus,
