--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -40,7 +40,7 @@ const image =
   project.data.image || "https://anjasfedo.github.io/profile-circle.webp";
 ---
 
-<Layout title={title} keywords={keywords} image={image}>
+<Layout title={title} keywords={keywords} image={image} showNav={false}>
   <div
     class="relative min-h-screen w-full bg-white dark:bg-neutral-950 transition-colors duration-300 overflow-hidden"
   >
